add more feature on product and more table on data base